<resources>
    <string name="app_name">ExamenDef</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="btn_entrar">Entrar</string>
    <string name="input_nombre">Nombre</string>
    <string name="title_activity_menu_estudiante">MenuEstudiante</string>
    <string name="btn_crearEstudiante">Crear Estudiante</string>
    <string name="btn_gestionEstudiante">Gestionar Estudiante</string>
    <string name="title_activity_crear_estudiante">CrearEstudiante</string>
    <string name="input_nombresEstudiante">Nombres</string>
    <string name="input_apellidosEstudiante">Apellidos</string>
    <string name="input_semestreActual">Semestre</string>
    <string name="input_graduado">Graduado</string>
    <string name="input_fechaNacimiento">Fecha Nacimiento</string>
    <string name="btn_guardar_estudiante">Guardar</string>
    <string name="title_activity_gestion_estudiantes">GestionEstudiantes</string>
    <string name="title_activity_editar_estudiante">EditarEstudiante</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="bnt_gestionar_Hijos">Gestión hijos</string>
    <string name="bnt_crear_hijos">Crear hijos</string>
    <string name="title_activity_gestion_materia">Gestion Materia</string>
    <string name="title_activity_crear_materia">CrearMateria</string>
    <string name="txt_nombreMateria">Nombre materia</string>
    <string name="txt_codigoMateria">Código materia</string>
    <string name="txt_descripcionMateria">Descropción materia</string>
    <string name="txt_activoMateria">Activa?</string>
    <string name="txt_fechaCreacionMateria">Fecha creación</string>
    <string name="txt_numHorasPorSemana">Horas por semana</string>
    <string name="EstudianteId">estudiante id</string>
    <string name="btn_guardarHijo">Guardar materia</string>
    <string name="title_activity_editar_materia">Editar Materia</string>
    <string name="btnActualizarMateria">Editar Materia</string>
    <string name="btnEliminarMateria">Eliminar materia</string>
    <string name="textFechaCreacion">Fecha creación</string>
    <string name="title_activity_editar_materia2">EditarMateria2</string>
    <string name="title_activity_edit_materia_def">EditMateriaDef</string>

</resources>
