<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_editar_estudiante"
        tools:context=".EditarEstudiante">
    <CheckBox
            android:text="@string/input_graduado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inputGraduado" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputSemestre"
    />
    <Button
            android:text="@string/btn_actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_actualizar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_crearHijos" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputGraduado"/>
    <TextView
            android:text="@string/input_nombresEstudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nombres" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputNombre" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/nombres" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/input_apellidosEstudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apellidos"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.494" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputNombre"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputApellidos" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/apellidos"/>
    <TextView
            android:text="@string/input_fechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fechaNacimiento" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/inputApellidos" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/input_semestreActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/semestreActual"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/inputFechaNacimiento"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputSemestre" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/semestreActual" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputFechaNacimiento" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fechaNacimiento" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_eliminar"
            app:layout_constraintStart_toEndOf="@+id/btn_actualizar"
            android:layout_marginStart="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_gestion_hijos" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputGraduado"/>
    <Button
            android:text="@string/bnt_gestionar_Hijos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_gestion_hijos"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_crearHijos" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/bnt_crear_hijos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_crearHijos"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</android.support.constraint.ConstraintLayout>