<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_edit_materia_def"
        tools:context=".EditMateriaDef">
    <TextView
            android:text="@string/txt_nombreMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_NombreMateria"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputNombreMateria"
            app:layout_constraintTop_toBottomOf="@+id/txt_NombreMateria" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/txt_codigoMateria"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/txt_CodigoMateria" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintTop_toBottomOf="@+id/inputNombreMateria"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputCodigoMateria" app:layout_constraintTop_toBottomOf="@+id/txt_CodigoMateria"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/txt_descripcionMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_Descripcion"
            app:layout_constraintTop_toBottomOf="@+id/inputCodigoMateria" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputDescripcionMateria"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Descripcion"/>
    <TextView
            android:text="@string/txt_fechaCreacionMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFechaCreacion" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputDescripcionMateria"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inputFechaCreacion" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFechaCreacion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <CheckBox
            android:text="@string/txt_activoMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inputActivo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputHorasSemana" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/txt_numHorasPorSemana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtHorasSemana"
            app:layout_constraintTop_toBottomOf="@+id/inputFechaCreacion" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputHorasSemana" app:layout_constraintTop_toBottomOf="@+id/txtHorasSemana"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btnActualizarMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Actualizar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" android:layout_marginTop="112dp"
            app:layout_constraintTop_toBottomOf="@+id/inputActivo"/>
    <Button
            android:text="@string/btnEliminarMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Eliminar" app:layout_constraintStart_toEndOf="@+id/btn_Actualizar"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="112dp" app:layout_constraintTop_toBottomOf="@+id/inputActivo"
            app:layout_constraintHorizontal_bias="0.828"/>
</android.support.constraint.ConstraintLayout>